project_sources/collector/fixtures/powershell_analysis/good/custom_bounded_event_query.ps1
$WindowStart = (Get-Date).AddHours(-1)
$Events = Get-WinEvent -FilterHashtable @{ LogName = "Security"; StartTime = $WindowStart } -MaxEvents 100
Write-Output $Events.Count
