project_sources/collector/fixtures/powershell_analysis/bad/unbounded_event_query.ps1
$LogName = "Security"
$Events = Get-WinEvent -LogName $LogName
Write-Output $Events.Count
